# argument_collapse

./: .gitignore  DATA_LICENSE.md  LICENSE  README.md  SCHEMA.md  pyproject.toml  requirements.txt
configs/: subarg_diversity_16cohort_nyt.yaml  subarg_diversity_16forum_br.yaml
data/: EXAMPLES.md
docs/: README.md  _gen_full_site.py  boston_review_civil_liberties.html  boston_review_civil_liberties_arg_1.html  boston_review_civil_liberties_arg_2.html  boston_review_civil_liberties_arg_3.html  boston_review_civil_liberties_arg_4.html  boston_review_civil_liberties_arg_5.html  boston_review_civil_liberties_arg_6.html  boston_review_civil_liberties_arg_7.html  boston_review_civil_liberties_arg_8.html  cleanliness.html  cleanliness_arg_1.html  cleanliness_arg_2.html  cleanliness_arg_3.html  cleanliness_arg_4.html  cleanliness_arg_5.html  cleanliness_arg_6.html  cleanliness_arg_7.html  cleanliness_arg_8.html  debate_br_forum_africas_turn.html  debate_br_forum_after_neoliberalism.html  debate_br_forum_alternative_hedonism.html  debate_br_forum_anxieties_democracy.html  debate_br_forum_authentic_other.html  debate_br_forum_authoritarianism.html  debate_br_forum_backyard_environmentalism.html  debate_br_forum_bad_medicine.html  debate_br_forum_big_results.html  debate_br_forum_blue_divide.html  debate_br_forum_border_crisis.html  debate_br_forum_campus_protest.html  debate_br_forum_checks.html  debate_br_forum_citizens_united.html  debate_br_forum_citizenship_emergency.html  debate_br_forum_climate.html  debate_br_forum_constitutional_again.html  debate_br_forum_covid.html  debate_br_forum_democracys_dilemma.html  debate_br_forum_educating_democracy.html  (+245 more)
prompts/: README.md  generation.py  main_argument_judge.md  main_argument_judge.system.lead.txt  main_argument_judge.system.question.txt  main_argument_judge.user_template.cached.txt  main_argument_judge.user_template.txt  persona_extraction.system.txt  position_guide_extraction.system.txt  prompts.jsonl  question_type_classifier.system.txt  topic_classifier.system.txt  (+8 more)
(+5435 files in other folders)
